# WordCounter

./: ext.py  main.py  paginator.py  pyproject.toml  sync.py
attached_assets/: paginator_usage_examples_1750961956551.py
cogs/: analyze_chat.py  attachments.py  counter.py  counter_cmds.py  keyword.py  messages.py
cogs/utils/: chat_analyzer.py
